--- a/xrc_api/lib/xrc_api_web/templates/layout/app.html.eex
+++ b/xrc_api/lib/xrc_api_web/templates/layout/app.html.eex
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>Currency exchange calculator</title>
+	<title>Currency Converter</title>
 	<link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
 	<script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/jquery-3.7.1.min.js") %>"></script>
 	<script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
@@ -14,7 +14,7 @@
 </header>
 <main role="main" class="container">
 	<div class="exchange-form">
-		<h2>Currency calculator</h2>
+		<h2>Currency Converter</h2>
 		<form id="exchange-form">
 
 				<select id="origin_currency" name="origin_currency">
